<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete_all_notes"
        android:title="@string/menu_delete_all_notes"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_baseline_color_lens_24"
        android:title="@string/theme"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_theme_default"
                android:title="@string/default_theme" />
            <item
                android:id="@+id/menu_theme_dark_blue"
                android:title="@string/dark_blue" />
            <item
                android:id="@+id/menu_theme_dark_red"
                android:title="@string/dark_red" />
        </menu>
    </item>
</menu>