<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.fredrikbogg.notesapp.ui.main.MainFoldersViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:context=".ui.main.MainActivity"
        tools:openDrawer="start">

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/nav_graph"
            tools:ignore="FragmentTagUsage" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_height">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleTextGeneral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/general"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/notesTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:drawableStart="@drawable/ic_baseline_event_note_24"
                        android:drawablePadding="20dp"
                        android:drawableTint="?attr/colorAccent"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="center_vertical"
                        android:onClick="@{() -> viewmodel.defaultFolderSelected()}"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/notes"
                        android:textSize="14sp"
                        tools:text="Title" />

                    <TextView
                        android:id="@+id/createFolderTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:clickable="true"
                        android:drawableStart="@drawable/ic_baseline_create_new_folder_24"
                        android:drawablePadding="20dp"
                        android:drawableTint="?attr/colorAccent"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="center_vertical"
                        android:onClick="@{() -> viewmodel.insertFolder()}"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:text="@string/create_folder"
                        android:textSize="14sp"
                        tools:text="Title" />

                    <TextView
                        android:id="@+id/titleTextFolders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/folders"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/foldersRecyclerView"
                        folder_items="@{viewmodel.allFolders}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/list_item_folder" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>